--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link href="style.css" rel="stylesheet" />
+    <link href= "queries.css" rel= "stylesheet">
     <title>Guess My Number!</title>
   </head>
   <body>
